--- a/config/origin-server.cfg
+++ b/config/origin-server.cfg
@@ -10,12 +10,12 @@ register_port = 5556
 measure_port  = 5557
 alert_port    = 5558
 read_port     = 5559
-register_port = 5566
-measure_port  = 5567
+json_register_port = 5566
+json_measure_port  = 5567
 
-destiniation  = 'hdf5'
+destiniation  = "hdf5"
 
-alert_check_period = 120 # units of seconds
+alert_check_period = 120 ; units of seconds
 
 [MySQL]
 mysql_server_ip = "127.0.0.1"
