--- a/config/origin-server.cfg
+++ b/config/origin-server.cfg
@@ -4,25 +4,30 @@
 #
 
 [Server]
-ip = "127.0.0.1"
+ip                  = 127.0.0.1 ; change to origin server address for deployment
+register_port       = 5556
+measure_port        = 5557
+alert_port          = 5558
+read_port           = 5559
+json_register_port  = 5566
+json_measure_port   = 5567
 
-register_port = 5556
-measure_port  = 5557
-alert_port    = 5558
-read_port     = 5559
-json_register_port = 5566
-json_measure_port  = 5567
-
-destiniation  = "hdf5"
-
-alert_check_period = 120 ; units of seconds
+timestamp_type      = uint64
+destiniation        = hdf5
+alert_check_period  = 120 ; units of seconds
 
 [MySQL]
-mysql_server_ip = "127.0.0.1"
-mysql_db        = "origintest"
-mysql_user      = "test"
-mysql_password  = "test"
-timestamp_type  = "uint64"
+server_ip = 127.0.0.1
+db        = origintest
+user      = test
+password  = test
 
 [HDF5]
+data_path    = data
+data_file    = origin_test.hdf5
+chunksize    = 1024 ; 2**10 no exponents, import fails
+compression  = gzip ; False for no compression
 
+[FileSystem]
+data_path    = data
+info_file    = knownStreams.json
