--- a/config/origin-server-test.cfg
+++ b/config/origin-server-test.cfg
@@ -13,7 +13,12 @@ json_register_port  = 5566
 json_measure_port   = 5567
 
 timestamp_type      = uint64
+
+# pick the back end you want to use
 destiniation        = hdf5
+#destiniation        = mysql
+#destiniation        = filesystem
+
 alert_check_period  = 120 ; units of seconds
 
 [MySQL]
@@ -25,9 +30,9 @@ password  = test
 [HDF5]
 data_path    = data
 data_file    = origin_test.hdf5
-chunksize    = 262144; 2**18 no exponents, import fails
+chunksize    = 1024 ; 2**10 no exponents, import fails
 compression  = gzip ; False for no compression
 
 [FileSystem]
-data_path    = data
+data_path    = data/origin_test
 info_file    = knownStreams.json
