all destinations tested

--- a/config/origin-server-test.cfg
+++ b/config/origin-server-test.cfg
@@ -18,12 +18,13 @@ timestamp_type      = uint64
 destiniation        = hdf5
 #destiniation        = mysql
 #destiniation        = filesystem
+#destiniation        = mongodb
 
 alert_check_period  = 120 ; units of seconds
 
 [MySQL]
 server_ip = 127.0.0.1
-db        = origintest
+db        = origin_test
 user      = test
 password  = test
 
@@ -36,3 +37,11 @@ compression  = gzip ; False for no compression
 [FileSystem]
 data_path    = data/origin_test
 info_file    = knownStreams.json
+
+[MongoDB]
+server_ip = 127.0.0.1
+port      = 27017
+db        = origin_test
+# no SSL yet
+#user      = test
+#password  = test
