IndexError was not being caught in origin_destination, increased the logger level to info, changed name of data file in config file

--- a/config/origin-server.cfg
+++ b/config/origin-server.cfg
@@ -24,7 +24,7 @@ password  = test
 
 [HDF5]
 data_path    = data
-data_file    = origin_test.hdf5
+data_file    = origin.hdf5
 chunksize    = 262144 ; 2**18 no exponents, import fails
 compression  = gzip ; False for no compression
 
