added subscription cabability for issue #2

--- a/config/origin-server.cfg
+++ b/config/origin-server.cfg
@@ -9,11 +9,18 @@ register_port       = 5556
 measure_port        = 5557
 alert_port          = 5558
 read_port           = 5559
+pub_port            = 5560
 json_register_port  = 5566
 json_measure_port   = 5567
 
 timestamp_type      = uint64
+
+# pick the back end you want to use
 destiniation        = hdf5
+#destiniation        = mysql
+#destiniation        = filesystem
+#destiniation        = mongodb
+
 alert_check_period  = 120 ; units of seconds
 
 [MySQL]
@@ -31,3 +38,11 @@ compression  = gzip ; False for no compression
 [FileSystem]
 data_path    = data
 info_file    = knownStreams.json
+
+[MongoDB]
+server_ip = 127.0.0.1
+port      = 27017
+db        = origin_test
+# no SSL yet
+#user      = test
+#password  = test
