--- a/config/origin-server-test.cfg
+++ b/config/origin-server-test.cfg
@@ -9,6 +9,7 @@ register_port       = 5556
 measure_port        = 5557
 alert_port          = 5558
 read_port           = 5559
+pub_port            = 5560
 json_register_port  = 5566
 json_measure_port   = 5567
 
