--- a/config/origin-server.cfg
+++ b/config/origin-server.cfg
@@ -25,7 +25,7 @@ alert_check_period  = 120 ; units of seconds
 
 [MySQL]
 server_ip = 127.0.0.1
-db        = origintest
+db        = origin
 user      = test
 password  = test
 
@@ -36,7 +36,7 @@ chunksize    = 262144 ; 2**18 no exponents, import fails
 compression  = gzip ; False for no compression
 
 [FileSystem]
-data_path    = data
+data_path    = data/origin
 info_file    = knownStreams.json
 
 [MongoDB]
