--- a/config/origin-server.cfg
+++ b/config/origin-server.cfg
@@ -4,7 +4,7 @@
 #
 
 [Server]
-ip                  = 34.208.238.89 ; change to origin server address for deployment
+ip                  = hexlabmonitor.physics.wisc.edu ; change to origin server address for deployment
 register_port       = 5556
 measure_port        = 5557
 alert_port          = 5558
