--- a/config/origin-server-test.cfg
+++ b/config/origin-server-test.cfg
@@ -16,10 +16,10 @@ json_measure_port   = 5567
 timestamp_type      = uint64
 
 # pick the back end you want to use
-destiniation        = hdf5
-#destiniation        = mysql
-#destiniation        = filesystem
-#destiniation        = mongodb
+destination        = hdf5
+#destination        = mysql
+#destination        = filesystem
+#destination        = mongodb
 
 alert_check_period  = 120 ; units of seconds
 
