moved read socket handler to another thread since it was blocking other sockets, fixed a bug in hdf5 get archived data

--- a/config/origin-server-test.cfg
+++ b/config/origin-server-test.cfg
@@ -16,10 +16,10 @@ json_measure_port   = 5564
 timestamp_type      = uint64
 
 # pick the back end you want to use
-#destination        = hdf5
+destination        = hdf5
 #destination        = mysql
 #destination        = filesystem
-destination        = mongodb
+#destination        = mongodb
 
 alert_check_period  = 120 ; units of seconds
 
