fixed issue #14 and added some try statements that had errors pop up

--- a/config/origin-server-test.cfg
+++ b/config/origin-server-test.cfg
@@ -16,8 +16,8 @@ json_measure_port   = 5564
 timestamp_type      = uint64
 
 # pick the back end you want to use
-destination        = hdf5
-#destination        = mysql
+#destination        = hdf5
+destination        = mysql
 #destination        = filesystem
 #destination        = mongodb
 
