created a reader library and updated the toy example

--- a/config/origin-server-test.cfg
+++ b/config/origin-server-test.cfg
@@ -23,6 +23,9 @@ destination        = hdf5
 
 alert_check_period  = 120 ; units of seconds
 
+[Reader]
+timeout = 1000 ; units ms
+
 [MySQL]
 server_ip = 127.0.0.1
 db        = origin_test
