--- a/config/latency-test.cfg
+++ b/config/latency-test.cfg
@@ -23,6 +23,12 @@ destination        = hdf5
 
 alert_check_period  = 120 ; units of seconds
 
+[Reader]
+timeout = 1000 ; units ms
+
+[Subscriber]
+filter_len = 4 ; length of subscription filter 
+
 [MySQL]
 server_ip = 127.0.0.1
 db        = origin_test
