--- a/config/origin-server-test.cfg
+++ b/config/origin-server-test.cfg
@@ -26,6 +26,9 @@ alert_check_period  = 120 ; units of seconds
 [Reader]
 timeout = 1000 ; units ms
 
+[Subscriber]
+filter_len = 4 ; length of subscription filter 
+
 [MySQL]
 server_ip = 127.0.0.1
 db        = origin_test
