--- a/config/origin-server.cfg
+++ b/config/origin-server.cfg
@@ -4,8 +4,7 @@
 #
 
 [Server]
-#ip                  = 34.208.238.89 ; change to origin server address for deployment
-ip                  = hexlabmonitor.physics.wisc.edu ; change to origin server address for deployment
+ip                  = 34.208.238.89 ; change to origin server address for deployment
 register_port       = 5558
 measure_port        = 5559
 alert_port          = 5560
